# physimVK

./: .gitignore  CMakeLists.txt  imgui.ini  premake5.lua
engine/core/: common.hpp  core.cpp  core.hpp
engine/input/: input.cpp  input.hpp
engine/math/: simMath.hpp  vec2.hpp  vec2i.hpp
engine/physics/: physics.cpp  physics.hpp  uniformGrid.hpp
engine/renderer/: rendererVK.cpp  rendererVK.hpp  vk_descriptors.cpp  vk_descriptors.h  vk_images.cpp  vk_images.h  vk_initializers.cpp  vk_pipelines.cpp  vk_pipelines.h  vk_types.h  vk_util.hpp
engine/renderer/shaders/: black_comp.glsl  colored_triangle.frag  colored_triangle.vert  colored_triangle_mesh.vert.spv  compileShaders.bat  gradient_comp.glsl  gradient_comp.spv  gradient_compPush.glsl  gradient_compPush.spv  particle_instance.vert  particle_instance.vert.spv  particle_mesh.vert  particle_mesh.vert.spv  sky_comp.glsl
engine/types/: types.hpp
engine/utils/: AllocatorAligned.hpp  logger.cpp  logger.hpp  utils.hpp
game/: main.cpp
lib/: glm.lib  vkbootstrap.lib
lib/Debug/: glm.lib
